<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <!-- Dashboard Fragment - Ana sayfa -->
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.ncorp.hesapp.ui.fragment.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        
        <action
            android:id="@+id/action_dashboard_to_transactions"
            app:destination="@id/transactionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
            
        <action
            android:id="@+id/action_dashboard_to_contacts"
            app:destination="@id/contactsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
            
        <action
            android:id="@+id/action_dashboard_to_reports"
            app:destination="@id/reportsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
            
        <action
            android:id="@+id/action_dashboard_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Transactions Fragment - İşlemler -->
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.ncorp.hesapp.ui.fragment.TransactionsFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transactions">
        
        <action
            android:id="@+id/action_transactions_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <!-- Contacts Fragment - Kişiler -->
    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.ncorp.hesapp.ui.fragment.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts">
        
        <action
            android:id="@+id/action_contacts_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <!-- Reports Fragment - Raporlar -->
    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.ncorp.hesapp.ui.fragment.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/fragment_reports">
        
        <action
            android:id="@+id/action_reports_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <!-- Settings Fragment - Ayarlar -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ncorp.hesapp.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        
        <action
            android:id="@+id/action_settings_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

</navigation> 